<resources>
    <string name="app_name">لعبة خمن</string>
    <string name="false_text">خطأ</string>
    <string name="true_text">صحيح</string>
    <string name="question">السؤال</string>
    <string name="back_text">الرجوع</string>
    <string name="share_title_hint">ادخل عنوان المشاركة</string>
    <string name="share_question_text">مشاركة السؤال</string>
    <string name="change_question_text">تغيير السؤال</string>
    <string name="change_lang_text">تغيير اللغة</string>
    <string name="share_the_question_with_friends">شارك السؤال مع أصدقائك</string>

    <string-array name="questions">
        <item>توبقال هي أعلى قمة جبلية في العالم العربي؟</item>
        <item>الجزائر هي أكبر دولة عربية من حيث المساحة؟</item>
        <item>الدار البيضاء هي عاصمة المغرب؟</item>
        <item>كابول هى عاصمة افغانستان؟</item>
        <item>اضخم الحيوانات اللافقرية هو القنديل؟</item>
        <item>الدولة العربية التي يمر بها خط الاستواء هى السودان؟</item>
        <item>القلب هو أكبر عضو في جسم الإنسان؟</item>
        <item>أول مسجد في الإسلام هو المسجد النبوي؟</item>
        <item>الخال الوحيد لأولاد عمتك هو والدك؟</item>
        <item>اولى دول العالم انتاجا للموز هى الاكوادور؟</item>
        <item>الأرجنتين عاصمتها باكو؟</item>
        <item>عملة فيتنام هى دونج؟</item>
    </string-array>
    <string-array name="answers_details">
        <item>توبقال هي أعلى قمة جبلية في العالم العربي و تقع في المغرب</item>
        <item>الجزائر هي أكبر دولة عربية و إفريقية من حيث المساحة</item>
        <item>الرباط هي عاصمة المغرب</item>
        <item>كابول هى عاصمة افغانستان</item>
        <item>اضخم الحيوانات اللافقرية هو الحبار</item>
        <item>الدولة العربية التي يمر بها خط الاستواء هى الصومال</item>
        <item>الكبد هو أكبر عضو في جسم الإنسان</item>
        <item>أول مسجد في الإسلام هو مسجد قباء</item>
        <item>الخال الوحيد لأولاد عمتك هو والدك</item>
        <item>اولى دول العالم انتاجا للموز هى الاكوادور</item>
        <item>الأرجنتين عاصمتها بونس إيرس</item>
        <item>عملة فيتنام هى دونج</item>
    </string-array>

    <string-array name="languages">
        <item>العربية</item>
        <item>الإنجليزية</item>
    </string-array>
</resources>
